--- a/package.json
+++ b/package.json
@@ -1,28 +1,31 @@
 {
   "name": "restaurant-apps",
   "version": "1.0.0",
-  "description": "",
+  "description": "App",
   "main": "index.js",
   "scripts": {
-    "start-dev": "webpack-dev-server --config webpack.dev.js",
+    "start-dev": "webpack-dev-server --config webpack.dev.js --open",
     "build": "webpack --config webpack.prod.js",
+    "test-build": "http-server ./dist",
     "test": "karma start"
   },
   "keywords": [],
-  "author": "your_name <your.email@domain.com>",
+  "author": "https://github.com/xredha",
   "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.10.5",
     "@babel/preset-env": "^7.10.4",
     "babel-loader": "^8.1.0",
+    "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^6.0.3",
     "css-loader": "^3.6.0",
-    "eslint": "^7.4.0",
+    "eslint": "^7.16.0",
+    "eslint-config-google": "^0.14.0",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^4.3.0",
+    "http-server": "^0.12.3",
     "jasmine-ajax": "^4.0.0",
     "jasmine-core": "^3.5.0",
-    "jshint": "^2.12.0",
     "karma": "^5.1.0",
     "karma-chrome-launcher": "^3.1.0",
     "karma-firefox-launcher": "^1.3.0",
@@ -30,14 +33,17 @@
     "karma-sourcemap-loader": "^0.3.7",
     "karma-webpack": "^4.0.2",
     "style-loader": "^1.2.1",
-    "url-loader": "^4.1.1",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0",
     "webpack-merge": "^5.0.9",
-    "whatwg-fetch": "^3.2.0"
+    "webpack-pwa-manifest": "^4.3.0",
+    "whatwg-fetch": "^3.2.0",
+    "workbox-cli": "^5.1.4",
+    "workbox-webpack-plugin": "^6.0.2"
   },
   "dependencies": {
+    "idb": "^5.0.8",
     "regenerator-runtime": "^0.13.5"
   }
 }
